# Objektorientierung

./: .pdm-python  README.md  main.py  pyproject.toml
src/: ekgdata.py
