[project]
name = "Objektorientierung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukas Behensky",email = "bl9375@mci4me.at"},
    {name = "Christoph Gleinser", email = "gc0453@mci4me.at"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
