[project]
name = "Objektorientierung"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lukas Behensky",email = "bl9375@mci4me.at"},
]
dependencies = ["scipy>=1.17.1", "numpy>=2.4.6", "plotly>=6.8.0", "pandas>=3.0.3", "Pillow>=12.2.0", "streamlit>=1.58.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
